implementacion de mejoras para mostrar en frontend en cuanto a mapeo